objects/Product_History__c/Product_History__c.object-meta.xml
<CustomObject>
    <label>Product History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>