objects/Product_History__c/fields/Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Update__c</fullName>
    <label>Last Update</label>
    <type>Date</type>
</CustomField>