objects/Product_History__c/fields/Nett_Weight__c.field-meta.xml
<CustomField>
    <fullName>Nett_Weight__c</fullName>
    <label>Nett Weight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>