objects/Product_History__c/fields/Period01__c.field-meta.xml
<CustomField>
    <fullName>Period01__c</fullName>
    <label>Period01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>