objects/Product_History__c/fields/Period02__c.field-meta.xml
<CustomField>
    <fullName>Period02__c</fullName>
    <label>Period02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>