objects/Product_History__c/fields/Period03__c.field-meta.xml
<CustomField>
    <fullName>Period03__c</fullName>
    <label>Period03</label>
    <length>255</length>
    <type>Text</type>
</CustomField>