objects/Product_History__c/fields/Product_BU__c.field-meta.xml
<CustomField>
    <fullName>Product_BU__c</fullName>
    <label>Product BU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>