objects/Product_History__c/fields/Quantity01__c.field-meta.xml
<CustomField>
    <fullName>Quantity01__c</fullName>
    <label>Quantity01</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>