objects/Product_History__c/fields/Quantity02__c.field-meta.xml
<CustomField>
    <fullName>Quantity02__c</fullName>
    <label>Quantity02</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>