objects/Product_History__c/fields/Quantity03__c.field-meta.xml
<CustomField>
    <fullName>Quantity03__c</fullName>
    <label>Quantity03</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>