objects/Product_History__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <label>SalesOrg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>