objects/Product_History__c/fields/SAP_Account__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account__c</fullName>
    <label>SAP Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>